[gd_scene load_steps=21 format=3 uid="uid://cborbpl4sgn0q"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_ajh8g"]
[ext_resource type="Texture2D" uid="uid://c8wncditunibt" path="res://Assets/Art/bg.png" id="2_ntfse"]
[ext_resource type="Texture2D" uid="uid://ft0qbmi771sl" path="res://Assets/GUI Elements/HP_bg.png" id="3_ggbb1"]
[ext_resource type="Texture2D" uid="uid://c6uiu74lr3hyy" path="res://Assets/GUI Elements/label_HP.png" id="4_pvtmw"]
[ext_resource type="Texture2D" uid="uid://cu11huuj40ux0" path="res://Assets/GUI Elements/player_health_bg.png" id="5_2lhxu"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="5_7qbib"]
[ext_resource type="Texture2D" uid="uid://b2x5jmk5hsexc" path="res://Assets/GUI Elements/player_health_fill.png" id="6_wr1a3"]
[ext_resource type="Texture2D" uid="uid://cnha72ikvcjf8" path="res://Assets/GUI Elements/coins_bg.png" id="7_15kau"]
[ext_resource type="Texture2D" uid="uid://iuobd2knypsu" path="res://Assets/GUI Elements/Coin.png" id="8_uuqs3"]
[ext_resource type="Texture2D" uid="uid://eh3yjhjenwgd" path="res://Assets/GUI Elements/potions_bg.png" id="9_4awrb"]
[ext_resource type="Texture2D" uid="uid://umx31t5dhhmx" path="res://Assets/GUI Elements/weapon_bg.png" id="10_fhaiq"]
[ext_resource type="Texture2D" uid="uid://b7yphi2liwjr8" path="res://Assets/GUI Elements/shield_bg.png" id="11_gm66h"]
[ext_resource type="Texture2D" uid="uid://ba2gs3oxssay3" path="res://Assets/GUI Elements/label_HP_bg.png" id="12_stw17"]
[ext_resource type="PackedScene" uid="uid://ht0urhfod0mm" path="res://Scenes/shop.tscn" id="13_0eury"]
[ext_resource type="Texture2D" uid="uid://cd0fvpqcm2buy" path="res://Assets/GUI Elements/EnemyHealthBG.png" id="13_ggx7q"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="14_8ny5w"]
[ext_resource type="Texture2D" uid="uid://codqe8ci1ouha" path="res://Assets/GUI Elements/EnemyHealthProgress.png" id="14_asbp4"]
[ext_resource type="Texture2D" uid="uid://ba1xb8a11i0ww" path="res://Assets/GUI Elements/green_btn.png" id="15_xfriw"]
[ext_resource type="Texture2D" uid="uid://bxv7hxv75l1h6" path="res://Assets/GUI Elements/red_btn.png" id="16_jb2iu"]
[ext_resource type="Script" path="res://Scripts/Deck.gd" id="17_edk26"]

[node name="Playspace" type="Node2D"]
script = ExtResource("1_ajh8g")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960.75, 541.999)
scale = Vector2(3.75879, 2.10938)
texture = ExtResource("2_ntfse")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(0, 800)
script = ExtResource("17_edk26")

[node name="Margin" type="MarginContainer" parent="Deck"]
offset_right = 1923.0
offset_bottom = 275.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBox" type="HBoxContainer" parent="Deck/Margin"]
layout_mode = 2

[node name="DiscardPileContainer" type="VBoxContainer" parent="Deck/Margin/HBox"]
layout_mode = 2

[node name="CardCount" type="HBoxContainer" parent="Deck/Margin/HBox/DiscardPileContainer"]
layout_mode = 2

[node name="CardsDiscarded" type="Label" parent="Deck/Margin/HBox/DiscardPileContainer/CardCount"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="DiscardPile" type="TextureRect" parent="Deck/Margin/HBox/DiscardPileContainer"]
layout_mode = 2
texture = ExtResource("11_gm66h")

[node name="FlexGrow" type="VBoxContainer" parent="Deck/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DrawPileContainer" type="VBoxContainer" parent="Deck/Margin/HBox"]
layout_mode = 2

[node name="Center" type="CenterContainer" parent="Deck/Margin/HBox/DrawPileContainer"]
layout_mode = 2

[node name="CardCount" type="HBoxContainer" parent="Deck/Margin/HBox/DrawPileContainer/Center"]
layout_mode = 2

[node name="CardsLeft" type="Label" parent="Deck/Margin/HBox/DrawPileContainer/Center/CardCount"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "24"

[node name="Slash" type="Label" parent="Deck/Margin/HBox/DrawPileContainer/Center/CardCount"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "/"

[node name="CardsTotal" type="Label" parent="Deck/Margin/HBox/DrawPileContainer/Center/CardCount"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "24"

[node name="DeckDraw" type="TextureRect" parent="Deck/Margin/HBox/DrawPileContainer"]
layout_mode = 2
texture = ExtResource("10_fhaiq")

[node name="Hand" type="Node" parent="."]

[node name="GUI" type="MarginContainer" parent="."]
offset_top = 966.0
offset_right = 1922.0
offset_bottom = 1086.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="Actions" type="HBoxContainer" parent="GUI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="GUI/Actions"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI/Actions/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Actions/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Play" type="TextureButton" parent="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("15_xfriw")

[node name="Label" type="Label" parent="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer/Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Discard" type="TextureButton" parent="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("16_jb2iu")

[node name="Label" type="Label" parent="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer/Discard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Discard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="Node" parent="."]
script = ExtResource("5_7qbib")

[node name="PlayerInfo" type="VBoxContainer" parent="Player"]
offset_left = 10.0
offset_top = 1.0
offset_right = 1912.0
offset_bottom = 335.0

[node name="Bars" type="VBoxContainer" parent="Player/PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Bar" type="HBoxContainer" parent="Player/PlayerInfo/Bars"]
layout_mode = 2

[node name="HP" type="MarginContainer" parent="Player/PlayerInfo/Bars/Bar"]
layout_mode = 2

[node name="bg" type="TextureRect" parent="Player/PlayerInfo/Bars/Bar/HP"]
layout_mode = 2
texture = ExtResource("3_ggbb1")

[node name="Magin" type="MarginContainer" parent="Player/PlayerInfo/Bars/Bar/HP/bg"]
layout_mode = 0
offset_right = 146.0
offset_bottom = 50.0
theme_override_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Player/PlayerInfo/Bars/Bar/HP/bg/Magin"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="Player/PlayerInfo/Bars/Bar/HP/bg/Magin/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_pvtmw")
expand_mode = 4
stretch_mode = 3

[node name="Number" type="Label" parent="Player/PlayerInfo/Bars/Bar/HP/bg/Magin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Margin" type="MarginContainer" parent="Player/PlayerInfo/Bars/Bar"]
layout_mode = 2
theme_override_constants/margin_left = -40

[node name="HPBar" type="TextureProgressBar" parent="Player/PlayerInfo/Bars/Bar/Margin"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("5_2lhxu")
texture_progress = ExtResource("6_wr1a3")

[node name="Counters" type="HBoxContainer" parent="Player/PlayerInfo"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Player/PlayerInfo/Counters"]
layout_mode = 2

[node name="Money" type="MarginContainer" parent="Player/PlayerInfo/Counters/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="Player/PlayerInfo/Counters/HBoxContainer/Money"]
layout_mode = 2
texture = ExtResource("7_15kau")

[node name="Margin" type="MarginContainer" parent="Player/PlayerInfo/Counters/HBoxContainer/Money/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_right = -25.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Player/PlayerInfo/Counters/HBoxContainer/Money/TextureRect/Margin"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Player/PlayerInfo/Counters/HBoxContainer/Money/TextureRect/Margin/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_uuqs3")
stretch_mode = 2

[node name="Number" type="Label" parent="Player/PlayerInfo/Counters/HBoxContainer/Money/TextureRect/Margin/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Player/PlayerInfo/Counters/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -40

[node name="TextureRect" type="TextureRect" parent="Player/PlayerInfo/Counters/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_4awrb")

[node name="Weapons" type="HBoxContainer" parent="Player/PlayerInfo"]
layout_mode = 2

[node name="Sword" type="TextureRect" parent="Player/PlayerInfo/Weapons"]
layout_mode = 2
texture = ExtResource("10_fhaiq")

[node name="Shield" type="TextureRect" parent="Player/PlayerInfo/Weapons"]
layout_mode = 2
texture = ExtResource("11_gm66h")

[node name="InPlay" type="Node" parent="."]

[node name="Enemy" type="Node" parent="."]
script = ExtResource("14_8ny5w")

[node name="EnemyInfo" type="VBoxContainer" parent="Enemy"]
offset_left = 1829.0
offset_top = 1.0
offset_right = 1924.0
offset_bottom = 783.0
size_flags_horizontal = 8

[node name="LevelContainer" type="VBoxContainer" parent="Enemy/EnemyInfo"]
layout_mode = 2

[node name="Level" type="Label" parent="Enemy/EnemyInfo/LevelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelNumber" type="Label" parent="Enemy/EnemyInfo/LevelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackContainer" type="VBoxContainer" parent="Enemy/EnemyInfo"]
layout_mode = 2

[node name="Attack" type="Label" parent="Enemy/EnemyInfo/AttackContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Attack:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackPower" type="Label" parent="Enemy/EnemyInfo/AttackContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Margin" type="MarginContainer" parent="Enemy/EnemyInfo"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Bg" type="NinePatchRect" parent="Enemy/EnemyInfo/Margin"]
layout_mode = 2
texture = ExtResource("12_stw17")

[node name="Margin" type="MarginContainer" parent="Enemy/EnemyInfo/Margin"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Health" type="Label" parent="Enemy/EnemyInfo/Margin/Margin"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "30"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="Enemy/EnemyInfo"]
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
fill_mode = 3
texture_under = ExtResource("13_ggx7q")
texture_progress = ExtResource("14_asbp4")

[node name="Shop" parent="." instance=ExtResource("13_0eury")]
position = Vector2(1952, 8)

[connection signal="pressed" from="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="GUI/Actions/MarginContainer/MarginContainer/HBoxContainer/Discard" to="." method="_on_discard_pressed"]
